# coinz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml  coinzConfig.cmake.in
include/coinz/: binary_op_aplicator.hpp  binary_to_nary.hpp  currency.hpp  find_type.hpp  get_n.hpp  i_tail.hpp  make_tail_index_sequence.hpp  to_ratio.hpp  tuple_partial_sum.hpp
include/coinz/tuple/: find_type.hpp  partial_sum.hpp
tests/: CMakeLists.txt  binary_op_aplicator_tests.cpp  binary_to_nary_tests.cpp  currency_tests.cpp  failing_find_type_test.cpp  find_type_tests.cpp  get_n_tests.cpp  i_tail_tests.cpp  make_tail_index_sequence_tests.cpp  to_ratio_tests.cpp  tuple_partial_sum_tests.cpp
tests/tuple/: failing_find_type_test.cpp  find_type_tests.cpp  partial_sum_tests.cpp
